# 8-SingletonObjects

./: README.adoc
Singleton/: CMakeLists.txt
Singleton/inc/: mysingleton.hpp
Singleton/qml/: Main.qml
Singleton/src/: main.cpp  mysingleton.cpp
